Fixed Video Reel section margin collapse

--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -466,10 +466,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
-.my-20 {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
-}
 .mt-3 {
   margin-top: 0.75rem;
 }
@@ -505,6 +501,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+.mt-20 {
+  margin-top: 5rem;
 }
 .mt-2 {
   margin-top: 0.5rem;
